[package]
name = "mini-signal"
version = "0.0.0"
description = "Incomplete Signal implementation - for learning purpose"
authors = ["Kioku"]
license = "MIT"
repository = "https://github.com/Kiooku/mini-signal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
