[package]
name = "mini-signal"
version = "0.0.0"
description = "Incomplete Signal implementation - for learning purpose"
authors = ["Kioku"]
license = "MIT"
repository = "https://github.com/Kiooku/mini-signal"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12.1"
hkdf = "0.12.3"
sha2 = "0.10.8"
aes-gcm-siv = "0.11.1"
num-bigint = { version = "0.4.4", features = ["rand"] }
x25519-dalek = { version = "2.0.0", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = "2.1.0"
rand_core = "0.6.4"
rand = "0.8.5"
hex-literal = "0.4.1"
argon2 = "0.5.2"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.35.0", features = ["full"] }
lazy_static = "1.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
