[package]
name = "mini-signal-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
mini-redis = "0.4.1"
bytes =  "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = { version = "0.3", features = ["tls"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
argon2 = "0.5.2"
x25519-dalek = "2.0.0"
native-tls = "0.2.11"
rand = "0.8.5"

[[example]]
name = "client-simulation"